# hemisphere

./: CMakeLists.txt  LICENSE.txt  README.md  bitset.h  data_mem.c  data_mem.h  instr-demo.cmd  main.cpp
doc/: Memory.md  Memory.txt  MemoryMap.md  Messaging.md  Register Model.txt  Stack.md
hardware/: Control Unit.txt  spicerack.txt
hmath/: CMakeLists.txt  hmath.c  hmath.h
html/: hemisphere.html
include/: data_mem.h
lib/hmath/: CMakeLists.txt
notes/: collatz.txt  sizes.txt
simulators/c/lib/: CMakeLists.txt
simulators/c/src/: data_mem.c
simulators/html/: hemisphere.html
simulators/spicerack/: CMakeLists.txt  main.c
src/: bitset.c  main.c
